--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 <body>
     <header>
         <nav>
-
+   <span>Fresh Bite</span>
+   <img src="/assets/img/food 2.svg" alt="coffe-icon">
         </nav>
-        <h1>Be The Fastest In Delivery Your Food</h1>
+        <h1>Be The Fastest In Delivery Your <strong>Food</strong></h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet</p>
     <button class="btn-header">
         <img src="/assets/img/clarity_sign-in-line.svg" alt="arrow">
@@ -22,6 +23,8 @@
     </button>
     </header>
     <main>
+        <span class="span-main">How it works</span>
+        <h2>What We Serve</h2>
 
     </main>
     <footer>
