--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <main>
         <span class="span-main">How it works</span>
         <h2>What We Serve</h2>
+        <p>Product Quality Is Our Priority, And Always Guarantees Halal And Safety Until It Is In Your Hands.</p>
 
     </main>
     <footer>
