--- a/index.html
+++ b/index.html
@@ -22,12 +22,95 @@
         <a href="#">Get Started</a>
     </button>
     </header>
+
     <main>
+
+        <section class="containner">
         <span class="span-main">How it works</span>
         <h2>What We Serve</h2>
         <p>Product Quality Is Our Priority, And Always Guarantees Halal And Safety Until It Is In Your Hands.</p>
 
+        <div>            
+          <img src="/assets/img/order 1.png" alt="order">
+          <h3>Fastest Delivery</h3>
+          <span>Delivery will be on time</span>
+       </div>
+
+       <div>
+        <img src="/assets/img/delivery 1.png" alt="delivery">
+        <h3>Best Quality</h3>
+        <span>The best quality of food for you</span>
+      </div>
+
+      <div>
+        <img src="/assets/img/courier 1.png" alt="courier">
+    </div>
+    </section>
+
+    <section>
+        <span class="span-main">Our menu</span>
+        <h2>Our Popular Menu</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam</p>
+
+        <div class="cards">
+
+        <div class="div__card">
+           <img src="/assets/img/Ramen.png" alt="Ramen">
+           <h4>Mie Ramen</h4>
+           <span>lorem ipsum</span>
+           <div class="div__cad-link">
+             <span>$ 20.2</span>
+             <img src="/assets/img/topcoat_yellow.svg" alt="topcoat_yellow">
+           </div>
+        </div>
+
+        <div class="div__card">
+            <img src="/assets/img/Salad.png" alt="Salad">
+            <h4>Salad Tahu</h4>
+            <span>lorem ipsum</span>
+            <div class="div__cad-link">
+              <span>$ 20.2</span>
+              <img src="/assets/img/topcoat_black.svg" alt="topcoat_black">
+            </div>
+        </div>
+
+      <div class="div__card">
+        <img src="/assets/img/Baker.png" alt="Baker">
+        <h4>Roti Bakar</h4>
+        <span>lorem ipsum</span>
+        <div class="div__cad-link">
+          <span>$ 20.2</span>
+          <img src="/assets/img/topcoat_black.svg" alt="topcoat_black">
+    </div>
+      </div>
+
+      <div class="div__card">
+        <img src="/assets/img/Spaghetti.png" alt="Spaghetti">
+        <h4>Spaghetti</h4>
+        <span>lorem ipsum</span>
+        <div class="div__cad-link">
+           <span>$ 20.2</span>
+           <img src="/assets/img/topcoat_black.svg" alt="topcoat_black">
+       </div>
+      </div>
+
+    </div>
+
+    <button class="btn-header" id="bnt">        
+        <a href="#">More Menu</a>
+    </button>
+    </section>
+
     </main>
+
+     <section class="containner-2">
+       <h2>Join our member and get discount up to 50%</h2>
+       <button class="btn-header">
+        <img src="/assets/img/clarity_sign-in-line.svg" alt="arrow">
+        <a href="#">Sign in</a>
+    </button>
+     </section>
+
     <footer>
 
     </footer>
