--- a/index.html
+++ b/index.html
@@ -15,12 +15,21 @@
    <span>Fresh Bite</span>
    <img src="/assets/img/food 2.svg" alt="coffe-icon">
         </nav>
+        <section class="sec-header">
+        <div>
         <h1>Be The Fastest In Delivery Your <strong>Food</strong></h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet</p>
     <button class="btn-header">
         <img src="/assets/img/clarity_sign-in-line.svg" alt="arrow">
         <a href="#">Get Started</a>
     </button>
+  </div>
+    <div>
+      <img src="/assets/img/Food-3.png"  alt="">
+      <img src="/assets/img/Food-2.png"  alt="">
+      <img src="/assets/img/Food-1.png"  alt="">
+    </div>
+  </section>
     </header>
 
     <main>
@@ -29,25 +38,29 @@
         <span class="span-main">How it works</span>
         <h2>What We Serve</h2>
         <p>Product Quality Is Our Priority, And Always Guarantees Halal And Safety Until It Is In Your Hands.</p>
-
+         
+        <div class="cont-div">
         <div>            
           <img src="/assets/img/order 1.png" alt="order">
-          <h3>Fastest Delivery</h3>
-          <span>Delivery will be on time</span>
+          <h3>Easy To order</h3>
+          <span>You only order through the app</span>
        </div>
 
        <div>
         <img src="/assets/img/delivery 1.png" alt="delivery">
-        <h3>Best Quality</h3>
-        <span>The best quality of food for you</span>
+        <h3>Fastest Delivery</h3>
+          <span>Delivery will be on time</span>
       </div>
 
       <div>
         <img src="/assets/img/courier 1.png" alt="courier">
+        <h3>Best Quality</h3>
+        <span>The best quality of food for you</span>
     </div>
+  </div>
     </section>
 
-    <section>
+    <section class="containner-extra">
         <span class="span-main">Our menu</span>
         <h2>Our Popular Menu</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam</p>
