--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 <body>
     <header>
         <nav>
-   <span>Fresh Bite</span>
-   <img src="/assets/img/food 2.svg" alt="coffe-icon">
+          <div class="div-nav">
+           <span>Fresh Bite</span>
+          <img src="/assets/img/food 2.svg" alt="coffe-icon">
+        </div>
         </nav>
         <section class="sec-header">
         <div>
@@ -126,9 +128,17 @@
       <!--Clients-->
 
       <section class="client-containner">
-        <img src="/assets/img/cliente.png" alt="">
-        <img src="/assets/img/cliente-2.png" alt="">
-        <img src="/assets/img/cliente-3.png" alt="">
+      
+
+       <div class="grid-container">
+        <div class="image-top">
+          <img src="/assets/img/cliente.png"  alt="Imagem 1">
+        </div>
+        <div class="image-bottom">
+          <img src="/assets/img/cliente-3.png" alt="Imagem 2">
+          <img src="/assets/img/cliente-2.png" alt="Imagem 3">
+        </div>
+      </div>
 
         <div class="client">
         <span class="span-main">What the say</span>
