--- a/index.html
+++ b/index.html
@@ -12,11 +12,35 @@
 <body>
     <header>
         <nav>
+          <section class="containner-nav">
+
           <div class="div-nav">
            <span>Fresh Bite</span>
           <img src="/assets/img/food 2.svg" alt="coffe-icon">
         </div>
+
+        <div class="div-nav-link">
+        <ul class="lista-nav">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Menu</a></li>
+          <li><a href="#">How it works</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+
+      <div  class="div-nav-link">
+        <img src="/assets/img/Find.svg" alt="Find">
+        <img src="/assets/img/Cart.svg" alt="cart">
+        <button class="btn-header" id="btn-link">
+          <img src="/assets/img/clarity_sign-in-line.svg" alt="arrow">        
+          <a href="#">More Menu</a>
+      </button> 
+      </div>
+
+    </section>
         </nav>
+
         <section class="sec-header">
         <div>
         <h1>Be The Fastest In Delivery Your <strong>Food</strong></h1>
@@ -27,9 +51,9 @@
     </button>
   </div>
     <div class="plates">
-      <img src="/assets/img/Food-3.png"  alt="">
-      <img src="/assets/img/Food-2.png"  alt="">
-      <img src="/assets/img/Food-1.png"  alt="">
+      <img src="/assets/img/Food-3.png"  alt="photo">
+      <img src="/assets/img/Food-2.png"  alt="photo">
+      <img src="/assets/img/Food-1.png"  alt="photo">
     </div>
   </section>
     </header>
@@ -201,7 +225,7 @@
 
             </div>
           </div>
-            <div>
+            <div class="div-footer">
               <span>Fresh Bite</span> 
               <ul>
                 <li>About us</li>
@@ -210,7 +234,7 @@
               </ul>
             </div>
 
-            <div>
+            <div class="div-footer">
               <span>Policy</span> 
               <ul>
                 <li>FAQ</li>
@@ -219,7 +243,7 @@
               </ul>
             </div>
 
-            <div>
+            <div class="div-footer">
               <span>Get in Touch</span> 
               <ul>
                 <li>+91 123 4567 8900</li>
