--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 <body>
     <header>
+      <button class="menu__button">Abrir
+        <img src="/assets/img/hamburger-menu.svg" alt="menu">
+      </button>
         <nav>
           <section class="containner-nav">
 
@@ -262,6 +265,6 @@
           </div>
           
     </footer>
-    
+    <script src="/assets/app/menu.js"></script>
 </body>
 </html>
