--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <header>
-      <button class="menu__button">Abrir
+     <!-- <button class="menu__button">
         <img src="/assets/img/hamburger-menu.svg" alt="menu">
-      </button>
+      </button>-->
         <nav>
           <section class="containner-nav">
 
