--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
            <span>Fresh Bite</span>
           <img src="/assets/img/food 2.svg" alt="coffe-icon">
         </div>
+        <img id="menu__button" src="/assets/img/hamburger-menu.svg" alt="">
 
-        <div class="div-nav-link">
+        <div id="menu" class="div-nav-link">
         <ul class="lista-nav">
           <li><a href="#">Home</a></li>
           <li><a href="#">Menu</a></li>
