--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <h2>What Our Customers Say About Us</h2>
         <div class="client-card">
           <img src="/assets/img/avatar.png" alt="">
-          <h3>Caio Marcellus</h3>
+          <h3>Caio</h3>
          
           <img src="/assets/img/star.svg" alt="">
           <img src="/assets/img/star.svg" alt="">
