--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li><a href="#">Menu</a></li>
           <li><a href="#">How it works</a></li>
           <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="pages/cad.html">Contact</a></li>
         </ul>
       </div>
 
