--- a/pages/cad.html
+++ b/pages/cad.html
@@ -30,7 +30,7 @@
 
         <div id="menu" class="div-nav-link">
         <ul class="lista-nav">
-          <li><a href="#">Home</a></li>
+          <li><a href="/index.html">Home</a></li>
           <li><a href="#">Menu</a></li>
           <li><a href="#">How it works</a></li>
           <li><a href="#">About</a></li>
@@ -53,17 +53,9 @@
         <section class="sec-header">
         <div>
         <h1>Be The Fastest In Delivery Your <strong>Food</strong></h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet</p>
-    <button class="btn-header">
-        <img src="/assets/img/clarity_sign-in-line.svg" alt="arrow">
-        <a href="#">Get Started</a>
-    </button>
+      
   </div>
-    <div class="plates">
-      <img src="/assets/img/Food-3.png"  alt="photo">
-      <img src="/assets/img/Food-2.png"  alt="photo">
-      <img src="/assets/img/Food-1.png"  alt="photo">
-    </div>
+ 
   </section>
     </header>
 
@@ -237,6 +229,7 @@
        
     </footer>
 <script src="/assets/app/menu.js"></script>
+<script src="/assets/app/cad.js"></script>
 </body>
 
 </html>
