--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet</p>
     <button class="btn-header">
         <img src="/assets/img/clarity_sign-in-line.svg" alt="arrow">
-        <a href="#">Get Started</a>
+        <a href="/pages/cad.html">Get Started</a>
     </button>
   </div>
     <div class="plates">
